Expense horizontal scroll bug and date beautification.

--- a/war/static-resources/modules/expensehistory/css/expensehistory.css
+++ b/war/static-resources/modules/expensehistory/css/expensehistory.css
@@ -25,6 +25,7 @@ div.expense:nth-child(2n){
 }
 .on.sentense-fillers{
 	padding-left:0;
+	font-style:italic;
 }
 .amount,.expense-name{
 	font-size: 2em;
